[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
